@startuml

title __EJERCICIO3's Class Diagram__\n

  package ar.edu.unahur.obj2 {
    package ar.edu.unahur.obj2.ejercicio3 {
      class LinkTag {
          - label : String
          + LinkTag()
          + getLabel()
      }
    }
  }
  

  package ar.edu.unahur.obj2 {
    package ar.edu.unahur.obj2.ejercicio3 {
      abstract class Node {
      }
    }
  }
  

  package ar.edu.unahur.obj2 {
    package ar.edu.unahur.obj2.ejercicio3 {
      class Parser {
          - nodes : List<Node>
          + Parser()
          + nodes()
      }
    }
  }
  

  package ar.edu.unahur.obj2 {
    package ar.edu.unahur.obj2.ejercicio3 {
      class StringNode {
          - text : String
          + StringNode()
          + getText()
      }
    }
  }
  

  package ar.edu.unahur.obj2 {
    package ar.edu.unahur.obj2.ejercicio3 {
      class Tag {
          - value : String
          + Tag()
          + getValue()
      }
    }
  }
  

  package ar.edu.unahur.obj2 {
    package ar.edu.unahur.obj2.ejercicio3 {
      class TextExtractor {
          + extractText()
          - extractStringNode()
          - extractTag()
          - extractLinkTag()
      }
    }
  }
  

  LinkTag -up-|> Node
  StringNode -up-|> Node
  Tag -up-|> Node


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
